--- a/apps/ethang-angular/src/app/tasks/task/task.component.html
+++ b/apps/ethang-angular/src/app/tasks/task/task.component.html
@@ -1,6 +1,6 @@
 <article>
   <h2>{{task().title}}</h2>
-  <time>{{ task().dueDate }}</time>
+  <time>{{ task().dueDate | date:'fullDate' }}</time>
   <p>{{task().summary}}</p>
   <p>
     <button class="btn" (click)="onComplete()">Complete</button>
