--- a/apps/ethang-angular/src/app/tasks/tasks.component.html
+++ b/apps/ethang-angular/src/app/tasks/tasks.component.html
@@ -2,12 +2,12 @@
   <header>
     <h2>{{ name() }}'s Tasks</h2>
   <menu>
-    <app-new-task (add)="onAddTask($event)"></app-new-task>
+    <app-new-task [userId]="userId()"></app-new-task>
   </menu>
   </header>
   <div class="grid gap-4">
-    @for (task of selectedUserTasks(); track task.id) {
-      <app-task [task]="task" (complete)="onCompleteTask($event)" />
+    @for (task of selectedUserTasks; track task.id) {
+      <app-task [task]="task" />
     }
   </div>
 </section>
