--- a/apps/ethang-angular/src/app/tasks/new-task/new-task.component.html
+++ b/apps/ethang-angular/src/app/tasks/new-task/new-task.component.html
@@ -10,21 +10,21 @@
         <div class="label">
           <span class="label-text">Title</span>
         </div>
-        <input [(ngModel)]="enteredTitle" type="text"
+        <input name="enteredTitle" [(ngModel)]="enteredTitle" type="text"
                class="input input-bordered w-full max-w-xs"/>
       </label>
       <label class="form-control">
         <div class="label">
           <span class="label-text">Summary</span>
         </div>
-        <textarea [(ngModel)]="enteredSummary"
+        <textarea name="enteredSummary" [(ngModel)]="enteredSummary"
                   class="textarea textarea-bordered h-24"></textarea>
       </label>
       <label class="form-control w-full max-w-xs">
         <div class="label">
           <span class="label-text">Due Date</span>
         </div>
-        <input [(ngModel)]="enteredDate" type="date"
+        <input name="enteredDate" [(ngModel)]="enteredDate" type="date"
                class="input input-bordered w-full max-w-xs"/>
       </label>
       <div class="flex gap-4 justify-end">
