--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -1,3 +1,6 @@
 <app-main-layout>
-<p>home works!</p>
+  <main class="prose">
+    <h1>Blogs</h1>
+    <h2><a routerLink="/blog/forcing-react">Forcing React to be What It Isn't</a></h2>
+  </main>
 </app-main-layout>
