Refactor navbar wrapper to use a <nav> element.
Replaced the <div> element wrapping the navigation with a semantic <nav> tag to enhance HTML structure and accessibility. This change improves clarity and better aligns with standard HTML practices.

--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -12,12 +12,12 @@
     <div class="navbar-start">
       <h1 class="px-5 py-1 font-bold text-xl">EthanG</h1>
     </div>
-    <div class="navbar-center flex">
+    <nav class="navbar-center flex">
       <ul class="menu menu-horizontal px-1">
         <li><a routerLink="/" class="link">Home</a></li>
         <li><a routerLink="/courses" class="link">Courses</a></li>
       </ul>
-    </div>
+    </nav>
   </div>
   <div class="mx-4 sm:mx-0">
   <ng-content/>
