--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <app-main-layout>
   <main class="prose">
     <h1>Blogs</h1>
-    <h2><a routerLink="/blog/forcing-react">Forcing React to be What It Isn't</a></h2>
+    <h2>
+      <a routerLink="/blog/forcing-react">Forcing React to be What It Isn't</a>
+    </h2>
   </main>
 </app-main-layout>
