--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -2,6 +2,9 @@
   <main class="prose">
     <h1>Blogs</h1>
     <h2>
+      <a routerLink="/blog/angular-now">It's Angular Now</a>
+    </h2>
+    <h2>
       <a routerLink="/blog/forcing-react">Forcing React to be What It Isn't</a>
     </h2>
   </main>
