Fix typo in Angular Now blog post HTML
Corrected "it's" to "its" in the paragraph text for proper grammar. This ensures better readability and professionalism in the content.

--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -18,7 +18,7 @@
   <img
     src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmoxeGd4d3lwM2Z4enZkNGpqeHNndWpya3J6Y2ozZW9zNzM3MWMzMSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/AbPWwqSgMejM4/giphy.gif"
     alt="I feel like I'm taking crazy pills"/>
-  <p>React server components feel more like React tucking its tails between it's legs
+  <p>React server components feel more like React tucking its tails between its legs
     and running to the server to handle everything for it. "If you stop using
     our rendering model and just use renderToString() on an express app hidden
     behind a black triangle, you won't have render issues!"</p>
