Set link to open in a new tab in Angular blog
Updated the anchor tag in `angular-now.component.html` to include `target="_blank"`, ensuring the Angular 19 release blog opens in a new tab. This improves user experience by keeping the current page accessible.

--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -31,7 +31,7 @@
     broken reactivity model of React, and keeps the JSX.</p>
   <p>So why would I go with Angular and not Solid?</p>
   <h2>Angular 19 Is Hot</h2>
-  <p><a href="https://blog.angular.dev/meet-angular-v19-7b29dfd05FFb84">The
+  <p><a href="https://blog.angular.dev/meet-angular-v19-7b29dfd05FFb84" target="_blank">The
     Angular 19 release blog</a> caught my eye for a few reasons:</p>
   <h3>Event Replay</h3>
   <p>To make a server side rendered app immediately
