Add dynamic meta tags for blog layouts
Introduced `title` and `description` inputs to `app-blog-layout` and updated components to generate meta tags dynamically using Angular's Meta service. Enhanced blog posts with specific titles and descriptions for improved SEO and content clarity. Removed unnecessary whitespace in `AngularNowComponent`.

--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -1,4 +1,4 @@
-<app-blog-layout>
+<app-blog-layout title="It's Angular Now" description="Why I'm switching to Angular from React.">
   <h1>It's Angular Now</h1>
   <p>This site has gone through more framework changes than there are JavaScript
     frameworks. I'm not sure how that's possible either. But it's part of the
