--- a/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
+++ b/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
@@ -1,4 +1,4 @@
-<app-blog-layout>
+<app-blog-layout title="Forcing React to be What It Isn't" description="We've been fighting the framework with React this whole time.">
   <h1>Forcing React to be What It Isn't</h1>
   <p>
     It's impossible to deny that SolidJS has won the competition of performant
