Add responsive styling to blog images with `max-w-full`
Updated image elements in blog components to include the `max-w-full` class, ensuring responsiveness and preventing images from exceeding container width. Changes improve display consistency across different screen sizes.

--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -21,6 +21,7 @@
     your users to just memoize queries to speed it up.
   </p>
   <img
+    class="max-w-full"
     src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmoxeGd4d3lwM2Z4enZkNGpqeHNndWpya3J6Y2ozZW9zNzM3MWMzMSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/AbPWwqSgMejM4/giphy.gif"
     alt="I feel like I'm taking crazy pills"
   />
