--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -20,11 +20,7 @@
     benefit? Imagine developing a database that is famously slow and telling
     your users to just memoize queries to speed it up.
   </p>
-  <img
-    class="max-w-full"
-    src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmoxeGd4d3lwM2Z4enZkNGpqeHNndWpya3J6Y2ozZW9zNzM3MWMzMSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/AbPWwqSgMejM4/giphy.gif"
-    alt="I feel like I'm taking crazy pills"
-  />
+  <advanced-image alt="I feel like I'm taking crazy pills" [cldImg]="crazyPillsImage" />
   <p>
     React server components feel more like React tucking its tails between its
     legs and running to the server to handle everything for it. "If you stop
