--- a/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
+++ b/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
@@ -36,7 +36,7 @@
     implemented signals for fine-grained reactivity. It feels like React is
     falling behind. And as a result, falling behind in performance.
   </p>
-  <img class="max-w-full" alt="JS Framework Benchmark" src="/images/framework-comparison.png" />
+  <advanced-image alt="JS Framework Benchmark" [cldImg]="frameworkBenchMarkImage" />
   <p>
     The React team themselves have never had a preference for client-side
     rendering and complex client-side state. Facebook was never built on the
@@ -78,11 +78,7 @@
     useState and Context have never been good enough. Why are there still 100
     libraries and no built-in answer for true reactivity?
   </p>
-  <img
-    class="max-w-full"
-    src="/images/react-team-schedule.png"
-    alt="React is not reactive according to docs"
-  />
+  <advanced-image alt="React is not reactive according to docs" [cldImg]="reactScheduleImage" />
   <p>
     Legend State recently
     <a href="https://www.legendapp.com/open-source/state/v3/" target="_blank"
