--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -20,7 +20,10 @@
     benefit? Imagine developing a database that is famously slow and telling
     your users to just memoize queries to speed it up.
   </p>
-  <advanced-image alt="I feel like I'm taking crazy pills" [cldImg]="crazyPillsImage" />
+  <advanced-image
+    alt="I feel like I'm taking crazy pills"
+    [cldImg]="crazyPillsImage"
+  />
   <p>
     React server components feel more like React tucking its tails between its
     legs and running to the server to handle everything for it. "If you stop
