use image service

--- a/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
+++ b/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
@@ -36,10 +36,13 @@
     implemented signals for fine-grained reactivity. It feels like React is
     falling behind. And as a result, falling behind in performance.
   </p>
-  <advanced-image
+  <div class="w-full relative">
+  <img
+    class="object-contain"
     alt="JS Framework Benchmark"
-    [cldImg]="frameworkBenchMarkImage"
+    src="https://images.ethang.dev/framework-comparison.png"
   />
+  </div>
   <p>
     The React team themselves have never had a preference for client-side
     rendering and complex client-side state. Facebook was never built on the
@@ -81,10 +84,13 @@
     useState and Context have never been good enough. Why are there still 100
     libraries and no built-in answer for true reactivity?
   </p>
-  <advanced-image
-    alt="React is not reactive according to docs"
-    [cldImg]="reactScheduleImage"
-  />
+  <div class="w-full relative">
+    <img
+      class="object-contain"
+      alt="React is not reactive according to docs"
+      src="https://images.ethang.dev/react-team-schedule.png"
+    />
+  </div>
   <p>
     Legend State recently
     <a href="https://www.legendapp.com/open-source/state/v3/" target="_blank"
