--- a/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
+++ b/apps/ethang-angular/src/app/blogs/angular-now/angular-now.component.html
@@ -21,8 +21,11 @@
     your users to just memoize queries to speed it up.
   </p>
   <div class="w-full relative">
-    <img class="object-contain" src="https://images.ethang.dev/crazy-pills.gif"
-         alt="I feel like I'm taking crazy pills"/>
+    <img
+      class="object-contain"
+      src="https://images.ethang.dev/crazy-pills.gif"
+      alt="I feel like I'm taking crazy pills"
+    />
   </div>
   <p>
     React server components feel more like React tucking its tails between its
@@ -47,7 +50,7 @@
     <a
       href="https://blog.angular.dev/meet-angular-v19-7b29dfd05FFb84"
       target="_blank"
-    >The Angular 19 release blog</a
+      >The Angular 19 release blog</a
     >
     caught my eye for a few reasons:
   </p>
@@ -68,7 +71,7 @@
     word "theory" is a stretch. And this person likely completely misunderstood
     his
     <a href="https://conf.react.dev/talks/6" target="_blank"
-    >React for Two Computers</a
+      >React for Two Computers</a
     >
     talk, which was not an announcement of a profound idea, but a pitch for
     Reacts direction to server frameworks.
@@ -129,10 +132,10 @@
     While React scutters off to hide its faults behind server rendering,
     client-side rendering is still improving, it's still getting better. Vue has
     been working on "<a
-    href="https://www.vuemastery.com/blog/the-future-of-vue-vapor-mode/"
-    target="_blank"
-  >Vapor Mode</a
-  >", and of course, innovative libraries like Qwik and SolidJS have been
+      href="https://www.vuemastery.com/blog/the-future-of-vue-vapor-mode/"
+      target="_blank"
+      >Vapor Mode</a
+    >", and of course, innovative libraries like Qwik and SolidJS have been
     driving amazing ideas.
   </p>
   <p>
@@ -147,7 +150,7 @@
     <a
       href="https://tanstack.com/query/latest/docs/framework/angular/overview"
       target="_blank"
-    >TanStack Query has an Angular adapter too</a
+      >TanStack Query has an Angular adapter too</a
     >.)
   </p>
   <p>
