Add external links section to main layout

--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -7,6 +7,15 @@
         <li><a routerLink="/courses" class="link">Courses</a></li>
       </ul>
     </nav>
+    <div class="divider mx-4"></div>
+    <nav class="grid gap-4">
+      <ul class="menu menu-sm">
+        <li><a href="https://www.linkedin.com/in/ethan-glover/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/eglove" target="_blank">GitHub</a></li>
+        <li><a href="https://frontendmasters.com/u/ethang/" target="_blank">Frontend Masters</a></li>
+        <li><a href="https://www.credly.com/users/ethan-glover.341d99c5" target="_blank">Credly</a></li>
+      </ul>
+    </nav>
   </div>
   <div class="sm:hidden navbar bg-base-100">
     <div class="navbar-start">
