--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div class="grid sm:grid-cols-[auto_1fr] gap-4">
   <div class="hidden sm:block border-r-2 min-h-screen">
-    <h1 class="px-5 py-1 font-bold text-xl">EthanG</h1>
+    <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
     <nav class="grid gap-4">
       <ul class="menu menu-sm">
         <li><a routerLink="/" class="link">Home</a></li>
@@ -19,7 +19,7 @@
   </div>
   <div class="sm:hidden navbar bg-base-100">
     <div class="navbar-start">
-      <h1 class="px-5 py-1 font-bold text-xl">EthanG</h1>
+      <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
     </div>
     <nav class="navbar-center flex">
       <ul class="menu menu-horizontal px-1">
@@ -28,7 +28,7 @@
       </ul>
     </nav>
   </div>
-  <div class="mx-4 sm:mx-0">
+  <div class="m-4 sm:mx-0">
     <ng-content />
   </div>
 </div>
