--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -2,7 +2,13 @@
   <main class="prose">
     <h1>Blogs</h1>
     <h2>
-      <a routerLink="/blog/motivation">Notes on generating motivation in software engineering.</a>
+      <a routerLink="/blog/learning-log-sagemaker-1">
+        Learning Log: AWS Sagemaker Setup
+      </a>
+    </h2>
+    <h2>
+      <a routerLink="/blog/motivation">Notes on generating motivation in
+        software engineering.</a>
     </h2>
     <h2>
       <a routerLink="/blog/angular-now">It's Angular Now</a>
