--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -7,8 +7,9 @@
       </a>
     </h2>
     <h2>
-      <a routerLink="/blog/motivation">Notes on generating motivation in
-        software engineering.</a>
+      <a routerLink="/blog/motivation"
+        >Notes on generating motivation in software engineering.</a
+      >
     </h2>
     <h2>
       <a routerLink="/blog/angular-now">It's Angular Now</a>
