--- a/apps/ethang-angular/src/app/blogs/learning-log-sagemaker-1/learning-log-sagemaker-1.component.html
+++ b/apps/ethang-angular/src/app/blogs/learning-log-sagemaker-1/learning-log-sagemaker-1.component.html
@@ -1,5 +1,5 @@
 <app-blog-layout>
-  <h1>Learning Log: AWS Sagemaker Setup</h1>
+  <h1>Study Log: AWS Sagemaker Setup</h1>
   <p>
     Pulling from the
     <a
