--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h1>Blogs</h1>
     <h2>
       <a routerLink="/blog/learning-log-sagemaker-1">
-        Learning Log: AWS Sagemaker Setup
+        Study Log: AWS Sagemaker Setup
       </a>
     </h2>
     <h2>
