--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -1,14 +1,14 @@
 <div class="grid sm:grid-cols-[auto_1fr] gap-4">
   <div class="hidden sm:block border-r-2 min-h-screen">
     <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
-    <nav class="grid gap-4">
+    <nav class="grid gap-4" aria-label="Main">
       <ul class="menu menu-sm">
         <li><a routerLink="/" class="link">Home</a></li>
         <li><a routerLink="/courses" class="link">Courses</a></li>
       </ul>
     </nav>
     <div class="divider mx-4"></div>
-    <nav class="grid gap-4">
+    <nav class="grid gap-4" aria-label="Social">
       <ul class="menu menu-sm">
         <li>
           <a
