Refactor and improve code consistency across components
Reorganized CSS class order for better readability in "sheet.tsx" and streamlined imports in "config.angular.js". Fixed minor formatting in "gen-rules.ts" and added accessibility label to improve navigation in "main-layout.component.html". Adjusted type definition in "update-item.tsx" for cleaner code.

--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -46,7 +46,7 @@
     <div class="navbar-start">
       <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
     </div>
-    <nav class="navbar-center flex">
+    <nav class="navbar-center flex" aria-label="Main">
       <ul class="menu menu-horizontal px-1">
         <li><a routerLink="/" class="link">Home</a></li>
         <li><a routerLink="/courses" class="link">Courses</a></li>
