--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -39,6 +39,11 @@
             >Credly</a
           >
         </li>
+        <li>
+          <a href="https://leetcode.com/u/eglove/" target="_blank" class="link"
+            >LeetCode</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
