--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -44,6 +44,14 @@
             >LeetCode</a
           >
         </li>
+        <li>
+          <a
+            href="https://www.khanacademy.org/profile/ethanglover/badges"
+            target="_blank"
+            class="link"
+            >Khan Academy</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
