--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -1,14 +1,10 @@
 <app-main-layout>
   <main class="prose">
     <h1>Blogs</h1>
-    <h2>
-      <a routerLink="/blog/learning-log-sagemaker-1">
-        Study Log: AWS Sagemaker Setup
-      </a>
-    </h2>
+    <h2><a routerLink="/blog/mimetic-desire">Mimetic Desire</a></h2>
     <h2>
       <a routerLink="/blog/motivation"
-        >Notes on generating motivation in software engineering.</a
+      >Notes: Generating motivation in software engineering</a
       >
     </h2>
     <h2>
