--- a/apps/ethang-angular/src/app/home/home.component.html
+++ b/apps/ethang-angular/src/app/home/home.component.html
@@ -1,17 +1,10 @@
 <app-main-layout>
   <main class="prose">
-    <h1>Blogs</h1>
-    <h2><a routerLink="/blog/mimetic-desire">Mimetic Desire</a></h2>
-    <h2>
-      <a routerLink="/blog/motivation"
-      >Notes: Generating motivation in software engineering</a
-      >
-    </h2>
-    <h2>
-      <a routerLink="/blog/angular-now">It's Angular Now</a>
-    </h2>
-    <h2>
-      <a routerLink="/blog/forcing-react">Forcing React to be What It Isn't</a>
-    </h2>
+    <h1>Activity Log</h1>
+    @for (blog of blogs; track blog.link) {
+      <h2>
+        <a [routerLink]="blog.link">{{ blog.title }}</a>
+      </h2>
+    }
   </main>
 </app-main-layout>
