--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -41,6 +41,14 @@
         </li>
         <li>
           <a
+            href="https://www.goodreads.com/user/show/6137062-ethan-glover"
+            target="_blank"
+            class="link"
+            >Goodreads</a
+          >
+        </li>
+        <li>
+          <a
             href="https://www.khanacademy.org/profile/ethanglover/badges"
             target="_blank"
             class="link"
