Fix HTML entity in forcing-react blog

--- a/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
+++ b/apps/ethang-angular/src/app/blogs/forcing-react/forcing-react.component.html
@@ -132,7 +132,7 @@
     At first glance, it looks like the "state-manager" is just providing a lot
     of utilities for React memoization. Their examples look like an unfair
     comparison in which the React example uses no memoization, and their example
-    uses a &gt;Memo/&lt; component wrapper. But recreate it, and you realize how
+    uses a &lt;Memo/&gt; component wrapper. But recreate it, and you realize how
     handy this component really is. Legend state is providing a standard library
     for React in a similar vein to Effect.ts providing a standard library for
     JavaScript.
