--- a/apps/ethang-angular/src/app/blogs/looking-at-no-misused-spread/looking-at-no-misused-spread.component.html
+++ b/apps/ethang-angular/src/app/blogs/looking-at-no-misused-spread/looking-at-no-misused-spread.component.html
@@ -48,8 +48,8 @@
   <p>By spreading a promise, nothing will be added to the final object:</p>
   <app-code-block [code]="promiseExample" />
   <p>
-    Interestingly in the function case, TypeScript seems able to check if
-    the function has properties on it. At least within the same scope:
+    Interestingly in the function case, TypeScript seems able to check if the
+    function has properties on it. At least within the same scope:
   </p>
   <app-code-block [code]="functionExample" />
   <p>
@@ -63,15 +63,14 @@
   </p>
   <app-code-block [code]="stringExample" />
   <p>
-    When you spread a class, you will only get static properties, not even static
-    methods.
+    When you spread a class, you will only get static properties, not even
+    static methods.
   </p>
   <app-code-block [code]="classExample" />
   <p>
     And of course, the same issue happens when you spread the instance of a
-    class. This, in my opinion, very important as with third-party
-    libraries, we don't always know if an object is a plain object or a class
-    instance.
+    class. This, in my opinion, very important as with third-party libraries, we
+    don't always know if an object is a plain object or a class instance.
   </p>
   <app-code-block [code]="instanceExample" />
 </app-blog-layout>
