Add CORS support to createJsonResponse and update dependencies

--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -12,6 +12,14 @@
       <ul class="menu menu-sm">
         <li>
           <a
+            href="https://images.ethang.dev/ethan-glover.pdf"
+            target="_blank"
+            class="link"
+            (click)="handleResumeClick()"
+          >Resume</a>
+        </li>
+        <li>
+          <a
             href="https://www.linkedin.com/in/ethan-glover/"
             target="_blank"
             class="link"
