--- a/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
+++ b/apps/ethang-angular/src/app/layouts/main-layout/main-layout.component.html
@@ -16,7 +16,8 @@
             target="_blank"
             class="link"
             (click)="handleResumeClick()"
-          >Resume</a>
+            >Resume</a
+          >
         </li>
         <li>
           <a
