--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -1,7 +1,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf8" />
-    <title>EthanG</title>
+    <title>EthanG | <%- title %></title>
     <base href="<%- baseUrl %>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -13,6 +13,17 @@
 
     <meta name="theme-color" content="#1976d2" />
   </head>
+  <script type="module">
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./service-worker.js').then(registration => {
+          console.log('SW registered: ', registration)
+        }).catch(registrationError => () => {
+          console.error('SW registration failed: ', registrationError);
+        })
+      })
+    }
+  </script>
   <style>
     ${ style }
   </style>
