--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -36,7 +36,7 @@
         <nav class="grid gap-4" aria-label="Main">
           <ul class="menu menu-sm">
             <li><a href="./" class="link">Home</a></li>
-            <li><a href="./courses" class="link">Courses</a></li>
+            <li><a href="./courses/" class="link">Courses</a></li>
           </ul>
         </nav>
         <div class="divider mx-4"></div>
@@ -105,7 +105,7 @@
         <nav class="navbar-center flex" aria-label="Main">
           <ul class="menu menu-horizontal px-1">
             <li><a href="./" class="link">Home</a></li>
-            <li><a href="./courses" class="link">Courses</a></li>
+            <li><a href="./courses/" class="link">Courses</a></li>
           </ul>
         </nav>
       </div>
