Add `rel="prefetch"` to links

--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -52,8 +52,10 @@
         <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
         <nav class="grid gap-4" aria-label="Main">
           <ul class="menu menu-sm">
-            <li><a href="./" class="link">Home</a></li>
-            <li><a href="./courses/" class="link">Courses</a></li>
+            <li><a rel="prefetch" href="./" class="link">Home</a></li>
+            <li>
+              <a rel="prefetch" href="./courses/" class="link">Courses</a>
+            </li>
           </ul>
         </nav>
         <div class="divider mx-4"></div>
@@ -121,8 +123,10 @@
         </div>
         <nav class="navbar-center flex" aria-label="Main">
           <ul class="menu menu-horizontal px-1">
-            <li><a href="./" class="link">Home</a></li>
-            <li><a href="./courses/" class="link">Courses</a></li>
+            <li><a rel="prefetch" href="./" class="link">Home</a></li>
+            <li>
+              <a rel="prefetch" href="./courses/" class="link">Courses</a>
+            </li>
           </ul>
         </nav>
       </div>
