--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -53,13 +53,13 @@
         const url = "./";
 
         try {
-          const response = await fetch('./templates/home');
+          const response = await fetch("./templates/home");
           mainContent.innerHTML = await response.text();
           history.pushState(null, null, url);
         } catch {
           location.href = url;
         }
-      })
+      });
     }
 
     const courseLinks = document.querySelectorAll(".courseLink");
@@ -69,7 +69,7 @@
         const url = "./courses/";
 
         try {
-          const response = await fetch('./templates/courses');
+          const response = await fetch("./templates/courses");
           mainContent.innerHTML = await response.text();
           history.pushState(null, null, url);
         } catch {
@@ -89,7 +89,9 @@
           <ul class="menu menu-sm">
             <li><a rel="prefetch" href="./" class="homeLink link">Home</a></li>
             <li>
-              <a rel="prefetch" href="./courses/" class="courseLink link">Courses</a>
+              <a rel="prefetch" href="./courses/" class="courseLink link"
+                >Courses</a
+              >
             </li>
           </ul>
         </nav>
@@ -160,7 +162,9 @@
           <ul class="menu menu-horizontal px-1">
             <li><a rel="prefetch" href="./" class="homeLink link">Home</a></li>
             <li>
-              <a rel="prefetch" href="./courses/" class="courseLink link">Courses</a>
+              <a rel="prefetch" href="./courses/" class="courseLink link"
+                >Courses</a
+              >
             </li>
           </ul>
         </nav>
