--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -33,7 +33,7 @@
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
         navigator.serviceWorker
-          .register("./service-worker.js")
+          .register("./service-worker.js", { scope: "/" })
           .then((registration) => {
             console.log("SW registered:", registration);
           })
